pass beer info to beer activity

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
         }
     }
     buildTypes.each {
-        it.buildConfigField 'String', 'BEER_API_KEY', MyKey
+        it.buildConfigField 'String', 'BEER_API_KEY', '"MY_KEY"'
     }
 }
 
